# winml_tracker

./: CMakeLists.txt  README.md  azure-pipelines.yml  package.xml
.github/workflows/: ci.yaml  main.yml  pub.yaml
ci/: defaults.yaml
include/winml_tracker/: pose_parser.h  winml_tracker.h  yolo_box.h
launch/: demo.launch  demo_fake.launch  tracker.launch
src/: demo.cpp  main.cpp  ml_fake.cpp  pose_parser.cpp  winml_tracker.cpp  yolo_box.cpp
test/: testtracker.cpp
winml/: CMakeLists.txt  package.xml
winml/include/winml_tracker/: pose_parser.h  winml_tracker.h  yolo_box.h
winml/src/: main.cpp  pose_parser.cpp  winml_tracker.cpp  yolo_box.cpp
winml/test/: testtracker.cpp
winml_msgs/: package.xml
