<?xml version="1.0"?>
<package format="2">
  <name>winml_msgs</name>
  <version>0.0.1</version>
  <description>The winml_msgs package</description>
  
  <maintainer email="lamadio@microsoft.com">Lou Amadio</maintainer>
  
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <depend>message_runtime</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
